--- a/Backend/gemfile
+++ b/Backend/gemfile
@@ -1,6 +1,5 @@
 source 'https://rubygems.org'
 
-gem 'webrick'
 gem 'rackup'
 gem 'sinatra'
 gem 'sinatra-cross_origin'
@@ -9,3 +8,4 @@ gem 'rerun'
 gem 'bcrypt'
 gem 'jwt'
 gem 'debug'
+gem 'dotenv'
